--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,12 @@ abstract: 'Visual DOM client library for Perl'
 author:
   - 'Agent Zhang <agentzh@yahoo.cn>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.82'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -13,16 +16,15 @@ meta-spec:
 name: VDOM
 no_index:
   directory:
-    - t
-    - inc
-    - doc
-    - share
     - demo
     - inc
     - t
 requires:
+  Class::XSAccessor: 0
+  JSON::XS: 0
+  List::MoreUtils: 0
   Scalar::Util: 0
   perl: 5.6.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.001
+version: 0.010
